<resources>
    <string name="app_name">PolyAbroad</string>
    <string name="welcome_message">Bienvenue sur l\'application mobile Polyabroad !</string>
    <string name="home_button">TRAITER LES AVIS</string>
    <string name="avis">AVIS : </string>
    <string name="notation">NOTE : </string>
    <string name="student">ÉTUDIANT(E) : </string>
    <string name="destination">DESTINATION : </string>
    <string name="university">UNIVERSITÉ : </string>
    <string name="date">PUBLIÉ LE : </string>
    <string name="delete">Supprimer</string>
    <string name="validate">Publier</string>


    <string-array name="spinner">
        <item>BAT</item>
        <item>SI</item>
        <item>MAM</item>
    </string-array>

</resources>
