<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp" />

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card"
        android:layout_width="320dp"
        android:layout_height="250dp"
        android:layout_below="@id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />


            <TextView
                android:id="@+id/nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dates"
                android:text="@string/student" />

            <TextView
                android:id="@+id/university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nom"
                android:gravity="left"
                android:text="@string/university" />

            <TextView
                android:id="@+id/avis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/university"
                android:gravity="left"
                android:text="@string/avis" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/myred"
            android:text="@string/delete" />

        <Button
            android:id="@+id/add_dataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@id/cancelButton"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/validate" />
    </RelativeLayout>
</RelativeLayout>






